--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -131,7 +131,13 @@
                 </select>
             </div>
 
-            <div class="projects tabcontent" id="Mobile">
+            <div
+                class="projects tabcontent"
+                id="Mobile"
+                data-aos="fade-up"
+                data-aos-offset="100"
+                data-aos-delay="200"
+            >
                 <div class="col">
                     <div
                         class="projectTemplateNew"
@@ -142,13 +148,23 @@
                   );"
                     >
                         <img
-                            src="Images/proj3.png"
+                            src="Images/Projects/Cookeasy3.png"
                             class="projectTemplatePicture"
+                            style="background-color: #1d1d1d"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
-                                This is just a simple app
+                            <p
+                                class="projectTemplateTitle"
+                                style="color: white"
+                            >
+                                CookEasy
+                            </p>
+                            <p
+                                class="projectTemplateSubText"
+                                style="color: white"
+                            >
+                                A cooking app that lets users decide what to
+                                cook and manage their groceries
                             </p>
                         </div>
                     </div>
@@ -162,13 +178,15 @@
                   );"
                     >
                         <img
-                            src="Images/proj2.png"
+                            src="Images/Projects/Medi.png"
                             class="projectTemplatePicture"
+                            style="background-color: #f5f5f5"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateTitle">Medi</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
+                                A medical App to help users find health centers
+                                near them with pricing
                             </p>
                         </div>
                     </div>
@@ -178,18 +196,20 @@
                         class="projectTemplateNew"
                         style="position: relative"
                         onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    'https://www.behance.net/gallery/137999799/InstaLearn-Educational-Mobile-App',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
                         <img
-                            src="Images/proj4.png"
+                            src="Images/Projects/InstaLearn1.png"
                             class="projectTemplatePicture"
+                            style="background-color: #f9f9f9"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateTitle">InstaLearn</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
+                                An educational app to easily and effectively
+                                learn new skills
                             </p>
                         </div>
                     </div>
@@ -202,127 +222,124 @@
                   );"
                     >
                         <img
-                            src="Images/proj3.png"
+                            src="Images/Projects/MyMun1.png"
                             class="projectTemplatePicture"
+                            style="background-color: #f4f4f4"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateTitle">My Municipality</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="projects tabcontent" id="Webapps">
-                <div class="col">
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
-                        <img
-                            src="Images/proj3.png"
-                            class="projectTemplatePicture"
-                        />
-                        <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
-                                This is just a simple app
-                            </p>
-                        </div>
-                    </div>
-
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
-                        <img
-                            src="Images/proj2.png"
-                            class="projectTemplatePicture"
-                        />
-                        <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
-                                This is just a simple app
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
-                        <img
-                            src="Images/proj4.png"
-                            class="projectTemplatePicture"
-                        />
-                        <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
-                                This is just a simple app
-                            </p>
-                        </div>
-                    </div>
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
-                        <img
-                            src="Images/proj3.png"
-                            class="projectTemplatePicture"
-                        />
-                        <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
-                                This is just a simple app
+                                A citizen portal for people to report issues
+                                around them <br />
+                                for the govt to fix
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="projects tabcontent" id="Websites">
+            <div
+                class="projects tabcontent"
+                id="Webapps"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="200"
+                data-aos-duration="800"
+            >
                 <div class="col">
                     <div
                         class="projectTemplateNew"
                         style="position: relative"
+                        data-aos="fade-up"
+                        data-aos-delay="100"
                         onclick="window.open(
                     'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
                         <img
-                            src="Images/proj3.png"
+                            src="Images/Projects/Flex2.png"
                             class="projectTemplatePicture"
+                            style="background-color: #f5f5f5"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateTitle">Flex</p>
+                            <p class="projectTemplateSubText">
+                                A student portal
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        data-aos="fade-up"
+                        data-aos-delay="300"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/Projects/LinkX.png"
+                            class="projectTemplatePicture"
+                            style="background-color: #1d1d1d"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p
+                                class="projectTemplateTitle"
+                                style="color: white"
+                            >
+                                LinkX
+                            </p>
+                            <p
+                                class="projectTemplateSubText"
+                                style="color: white"
+                            >
+                                A productivity web app focused on reducing the
+                                time it <br />
+                                takes to go to links
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div
+                class="projects tabcontent"
+                id="Websites"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="200"
+                data-aos-duration="800"
+            >
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        data-aos="fade-up"
+                        data-aos-delay="300"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/Projects/aden1.png"
+                            class="projectTemplatePicture"
+                            style="background-color: #f5f5f5"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">Aden</p>
                             <p class="projectTemplateSubText">
                                 This is just a simple app
                             </p>
                         </div>
                     </div>
-
                     <div
                         class="projectTemplateNew"
+                        data-aos="fade-up"
                         style="position: relative"
                         onclick="window.open(
                     'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
@@ -330,12 +347,21 @@
                   );"
                     >
                         <img
-                            src="Images/proj2.png"
+                            src="Images/Projects/CrustPlay1.png"
                             class="projectTemplatePicture"
+                            style="background-color: #1d1d1d"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
+                            <p
+                                class="projectTemplateTitle"
+                                style="color: white"
+                            >
+                                CrustPlay
+                            </p>
+                            <p
+                                class="projectTemplateSubText"
+                                style="color: white"
+                            >
                                 This is just a simple app
                             </p>
                         </div>
@@ -345,38 +371,49 @@
                     <div
                         class="projectTemplateNew"
                         style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
+                        data-aos="fade-up"
                     >
                         <img
-                            src="Images/proj4.png"
+                            src="Images/Projects/CyberWebsite1.png"
                             class="projectTemplatePicture"
+                            style="background-color: #1d1d1d"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
-                            <p class="projectTemplateSubText">
-                                This is just a simple app
+                            <p
+                                class="projectTemplateTitle"
+                                style="color: white"
+                            >
+                                TechOwl
+                            </p>
+                            <p
+                                class="projectTemplateSubText"
+                                style="color: white"
+                            >
+                                Landing page for a cyber security firm TechOwl
                             </p>
                         </div>
                     </div>
+
                     <div
                         class="projectTemplateNew"
                         style="position: relative"
+                        data-aos="fade-up"
+                        data-aos-delay="100"
                         onclick="window.open(
                     'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
                         <img
-                            src="Images/proj3.png"
+                            src="Images/Projects/daastan1.png"
                             class="projectTemplatePicture"
+                            style="background-color: #f5f5f5"
                         />
                         <div class="projectTemplateWritten">
-                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateTitle">Daastan</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
+                                Landing page + online store of a book publishing
+                                company
                             </p>
                         </div>
                     </div>
@@ -385,13 +422,9 @@
         </section>
 
         <section id="contact">
-            <p class="contactTitle" data-aos="fade-up">Let's work together!</p>
+            <p class="contactTitle">Let's work together!</p>
             <div class="contactOuterContainer">
-                <div
-                    class="contactInfo"
-                    data-aos="fade-up"
-                    data-aos-delay="250"
-                >
+                <div class="contactInfo">
                     <p class="smallCaps">Connect</p>
                     <p class="contactInfoContent">info@gmail.com</p>
                     <p class="contactInfoContent">+92 315 7600100</p>
@@ -400,11 +433,7 @@
                         <p class="contactInfoContent">Whatsapp QR</p>
                     </div> -->
                 </div>
-                <div
-                    class="contactForm"
-                    data-aos="fade-up"
-                    data-aos-delay="250"
-                >
+                <div class="contactForm">
                     <form
                         action="https://formspree.io/f/xlezjwrj"
                         method="POST"
