--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -178,7 +178,8 @@
                                 class="projectTemplateSubText"
                                 style="color: white"
                             >
-                                This is just a simple app
+                                A cooking app that lets users decide what to
+                                cook and manage their groceries
                             </p>
                         </div>
                     </div>
@@ -189,7 +190,7 @@
                         data-aos="fade-up"
                         data-aos-delay="100"
                         onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    'https://www.behance.net/gallery/140178639/Redesigning-a-Student-Portal-Figma',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
@@ -201,7 +202,7 @@
                         <div class="projectTemplateWritten">
                             <p class="projectTemplateTitle">Flex</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
+                                A student portal
                             </p>
                         </div>
                     </div>
@@ -213,7 +214,7 @@
                         data-aos="fade-up"
                         data-aos-delay="300"
                         onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    'https://www.behance.net/gallery/128820167/Python-Developer-Website-Design',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
@@ -225,7 +226,7 @@
                         <div class="projectTemplateWritten">
                             <p class="projectTemplateTitle">Aden</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
+                                Portfolio website of a python developer
                             </p>
                         </div>
                     </div>
@@ -233,10 +234,6 @@
                         class="projectTemplateNew"
                         data-aos="fade-up"
                         style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
                     >
                         <img
                             src="Images/Projects/CrustPlay1.png"
@@ -254,7 +251,7 @@
                                 class="projectTemplateSubText"
                                 style="color: white"
                             >
-                                This is just a simple app
+                                Landing page of a gaming platform
                             </p>
                         </div>
                     </div>
