--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -169,14 +169,7 @@
                         </div>
                     </div>
 
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
+                    <div class="projectTemplateNew" style="position: relative">
                         <img
                             src="Images/Projects/Medi.png"
                             class="projectTemplatePicture"
@@ -192,14 +185,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/137999799/InstaLearn-Educational-Mobile-App',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
+                    <div class="projectTemplateNew" style="position: relative">
                         <img
                             src="Images/Projects/InstaLearn1.png"
                             class="projectTemplatePicture"
@@ -213,14 +199,7 @@
                             </p>
                         </div>
                     </div>
-                    <div
-                        class="projectTemplateNew"
-                        style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
-                    >
+                    <div class="projectTemplateNew" style="position: relative">
                         <img
                             src="Images/Projects/MyMun1.png"
                             class="projectTemplatePicture"
@@ -253,7 +232,7 @@
                         data-aos="fade-up"
                         data-aos-delay="100"
                         onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    'https://www.behance.net/gallery/140178639/Redesigning-a-Student-Portal-Figma',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
@@ -276,10 +255,6 @@
                         style="position: relative"
                         data-aos="fade-up"
                         data-aos-delay="300"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
                     >
                         <img
                             src="Images/Projects/LinkX.png"
@@ -321,7 +296,7 @@
                         data-aos="fade-up"
                         data-aos-delay="300"
                         onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    'https://www.behance.net/gallery/128820167/Python-Developer-Website-Design',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
                     >
@@ -333,7 +308,7 @@
                         <div class="projectTemplateWritten">
                             <p class="projectTemplateTitle">Aden</p>
                             <p class="projectTemplateSubText">
-                                This is just a simple app
+                                Portfolio website of a python developer
                             </p>
                         </div>
                     </div>
@@ -341,10 +316,6 @@
                         class="projectTemplateNew"
                         data-aos="fade-up"
                         style="position: relative"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
                     >
                         <img
                             src="Images/Projects/CrustPlay1.png"
@@ -362,7 +333,7 @@
                                 class="projectTemplateSubText"
                                 style="color: white"
                             >
-                                This is just a simple app
+                                Landing page of a gaming platform
                             </p>
                         </div>
                     </div>
@@ -399,10 +370,6 @@
                         style="position: relative"
                         data-aos="fade-up"
                         data-aos-delay="100"
-                        onclick="window.open(
-                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                    '_blank' // <- This is what makes it open in a new window.
-                  );"
                     >
                         <img
                             src="Images/Projects/daastan1.png"
