--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -92,27 +92,78 @@
         </div>
 
         <section id="hero" data-aos="fade-up">
-            <div class="heroContent">
-                <p class="smallCaps" style="color: #ffffff">Hi, i am munaf</p>
+            <div class="heroContent" style="margin-top: 80px">
+                <!-- <p class="smallCaps" style="color: #ffffff">Hi, i am munaf</p> -->
+
+                <!-- <div class="content smallCaps">
+                    <div class="content__container">
+                        <p
+                            class="content__container__text smallCaps"
+                            style="color: #ffffff"
+                        >
+                            Hello
+                        </p>
+
+                        <ul
+                            class="content__container__list"
+                            style="color: #ffffff"
+                        >
+                            <li
+                                class="content__container__list__item smallCaps"
+                            >
+                                world !
+                            </li>
+                            <li
+                                class="content__container__list__item smallCaps"
+                            >
+                                bob !
+                            </li>
+                            <li
+                                class="content__container__list__item smallCaps"
+                            >
+                                users !
+                            </li>
+                            <li
+                                class="content__container__list__item smallCaps"
+                            >
+                                everybody !
+                            </li>
+                        </ul>
+                    </div>
+                </div> -->
+
+                <div class="console-container" style="margin-bottom: 24px">
+                    <span class="smallCaps" id="intro1" style="display: none"
+                        >Hi, I am</span
+                    >
+                    <span class="smallCaps" id="intro2">Hi, I am a</span>
+                    <span id="text" class="smallCaps"></span>
+                    <div class="console-underscore smallCaps" id="console">
+                        &#95;
+                    </div>
+                </div>
+
                 <p class="mainHeadingText">
-                    I build digital experiences that rock.
+                    I build custom product applications <br />
+                    and websites for startups and small <br />
+                    businesses that rock!
                 </p>
                 <div
                     class="heroBtns"
                     data-aos="fade-up"
-                    data-aos-offset="200"
+                    data-aos-offset="50"
                     data-aos-delay="100"
                     data-aos-duration="800"
+                    style="margin-top: 40px"
                 >
                     <a id="downloadProjectBtn" href="#contact">Get in Touch</a>
-                    <!-- <a id="getInContactBtn" href="#"
-                        >Check Portfolio
-                        <!-- <img
+                    <a id="getInContactBtn" href="#myProjects"
+                        >View Projects
+                        <img
                             src="Icons/arrow-right.svg"
                             alt="right arrow"
                             style="margin-left: 6px"
-                    /></a 
-                    >-->
+                    /></a>
                 </div>
             </div>
             <img src="Images/hero_img.png" alt="" class="heroPic" />
@@ -138,7 +189,7 @@
 
         <section id="myProjects">
             <div class="myProjectsContent" data-aos="fade-up">
-                <p class="smallCaps">My projects</p>
+                <p class="smallCaps">Projects</p>
                 <p class="bodyText">
                     Wide range from websites, webapps to mobile apps, each of
                     them unique and successful in their own way.
@@ -234,6 +285,10 @@
                         class="projectTemplateNew"
                         data-aos="fade-up"
                         style="position: relative"
+                        onclick="window.open(
+                    'https://www.crustplay.com',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
                     >
                         <img
                             src="Images/Projects/CrustPlay1.png"
@@ -271,7 +326,8 @@
         <section id="services">
             <p class="smallCaps" data-aos="fade-up">Services</p>
             <p class="bodyText" data-aos="fade-up">
-                Ambition and dedication for the attention to detail.
+                I create digital products & services that WoW, engage and
+                delight
             </p>
 
             <div
@@ -323,14 +379,21 @@
         </div>
 
         <section id="about">
-            <img src="Images/Blank.jpg" alt="" data-aos="fade-right" />
+            <img
+                src="Images/profile-pic.png"
+                alt=""
+                data-aos="fade-right"
+                width="280px"
+            />
             <div class="aboutContent" data-aos="fade-left">
                 <p class="smallCaps">About</p>
                 <p class="bodyText">
-                    Quisque dictum tortor viverra metus ultrices, nec tristique
-                    sem vehicula. Maecenas at velit dictum, tristique ipsum in,
-                    viverra elit. Proin iaculis sem dolor. Quisque dictum tortor
-                    viverra metus ultrices, nec tristique sem vehicula.
+                    I'm a UI/UX Designer and Developer based in Islamabad,
+                    Pakistan. I love solving problems by simplying complex
+                    problems and combining insightful reserach with intutive
+                    design. I enjoy every stage of creating digital products
+                    that are wanted by users, easy to use but also visually top
+                    notch.
                 </p>
             </div>
         </section>
@@ -420,5 +483,87 @@
         </footer>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script src="script.js"></script>
+        <script>
+            // function([string1, string2],target id,[color1,color2])
+            consoleText(
+                [
+                    /* "Munaf.", */
+                    "UI/UX Designer.",
+                    "Product Designer.",
+                    "Web Developer.",
+                    "Visual Designer.",
+                    "Brand Designer.",
+                ],
+                "text",
+                [
+                    /* "white", */ "#fe9a3a",
+                    "#fe9a3a",
+                    "#fe9a3a",
+                    "#fe9a3a",
+                    "#fe9a3a",
+                ]
+            );
+
+            function consoleText(words, id, colors) {
+                /* console.log(words.length);
+                if (words.length > 6) {
+                    document.getElementById("intro1").style.display = "none";
+                    document.getElementById("intro2").style.display =
+                        "inline-block";
+                } else {
+                    document.getElementById("intro2").style.display = "none";
+                    document.getElementById("intro1").style.display =
+                        "inline-block";
+                } */
+
+                if (colors === undefined) colors = ["#fff"];
+                var visible = true;
+                var con = document.getElementById("console");
+                var letterCount = 1;
+                var x = 1;
+                var waiting = false;
+                var target = document.getElementById(id);
+                target.setAttribute("style", "color:" + colors[0]);
+                window.setInterval(function () {
+                    if (letterCount === 0 && waiting === false) {
+                        waiting = true;
+                        target.innerHTML = words[0].substring(0, letterCount);
+                        window.setTimeout(function () {
+                            var usedColor = colors.shift();
+                            colors.push(usedColor);
+                            var usedWord = words.shift();
+                            words.push(usedWord);
+                            x = 1;
+                            target.setAttribute("style", "color:" + colors[0]);
+                            letterCount += x;
+                            waiting = false;
+                        }, 1000);
+                    } else if (
+                        letterCount === words[0].length + 1 &&
+                        waiting === false
+                    ) {
+                        waiting = true;
+                        window.setTimeout(function () {
+                            x = -1;
+                            letterCount += x;
+                            waiting = false;
+                        }, 1000);
+                    } else if (waiting === false) {
+                        target.innerHTML = words[0].substring(0, letterCount);
+                        letterCount += x;
+                    }
+                }, 120);
+                window.setInterval(function () {
+                    if (visible === true) {
+                        con.className = "console-underscore hidden";
+                        visible = false;
+                    } else {
+                        con.className = "console-underscore";
+
+                        visible = true;
+                    }
+                }, 400);
+            }
+        </script>
     </body>
 </html>
