--- a/mmphotos/index.html
+++ b/mmphotos/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <section id="title">
-            <h1>Muhammad Munaf</h1>
+            <h1>Your Name Here</h1>
             <h2 class="sub">The Photographer</h2>
 
             <p class="about">
