--- a/mmphotos/index.html
+++ b/mmphotos/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <section id="title">
-            <h1>Your Name Here</h1>
+            <h1>Muhammad Munaf</h1>
             <h2 class="sub">The Photographer</h2>
 
             <p class="about">
@@ -28,17 +28,64 @@
                 <button class="tabBtn">Events</button>
             </div>
 
-            <div class="photos">
-                <img src="https://picsum.photos/200" alt="" />
-                <img src="https://picsum.photos/200/150" alt="" />
-                <img src="https://picsum.photos/200" alt="" />
-                <img src="https://picsum.photos/200/300" alt="" />
-                <img src="https://picsum.photos/200" alt="" />
-                <img src="https://picsum.photos/200" alt="" />
-                <img src="https://picsum.photos/200/300" alt="" />
-                <img src="https://picsum.photos/200/300" alt="" />
+            <div id="photos" class="photos">
+                <!-- <div class="col">
+                    <img src="https://picsum.photos/200" alt="" />
+                    <img src="https://picsum.photos/200/150" alt="" />
+                    <img src="https://picsum.photos/200" alt="" />
+                </div>
+                <div class="col">
+                    <img src="https://picsum.photos/200/300" alt="" />
+                    <img src="https://picsum.photos/200" alt="" />
+                    <img src="https://picsum.photos/200" alt="" />
+                </div>
+                <div class="col">
+                    <img src="https://picsum.photos/200/300" alt="" />
+                    <img src="https://picsum.photos/200/300" alt="" />
+                </div> -->
+                <div class="photo">
+                    <img src="Images/1.JPG" alt="" />
+                    <div class="imgHover"><a href="#">View Image</a></div>
+                </div>
+                <div class="photo">
+                    <img src="Images/1.JPG" alt="" />
+                    <div class="imgHover"><a href="#">View Image</a></div>
+                </div>
+                <div class="photo">
+                    <img src="Images/1.JPG" alt="" />
+                    <div class="imgHover"><a href="#">View Image</a></div>
+                </div>
+                <div class="photo">
+                    <img src="Images/1.JPG" alt="" />
+                    <div class="imgHover"><a href="#">View Image</a></div>
+                </div>
+                <div class="photo">
+                    <img src="Images/1.JPG" alt="" />
+                    <div class="imgHover"><a href="#">View Image</a></div>
+                </div>
+                <!--<img src="https://picsum.photos/400" alt="" />
+                <img src="https://picsum.photos/400/150" alt="" />
+                <img src="https://picsum.photos/400" alt="" />
+                <img src="https://picsum.photos/400/150" alt="" />
+                <img src="https://picsum.photos/400" alt="" />
+                <img src="https://picsum.photos/400/500" alt="" />
+                <img src="https://picsum.photos/400" alt="" />
+                <img src="https://picsum.photos/400/300" alt="" />
+                <img src="https://picsum.photos/400" alt="" />
+                <img src="https://picsum.photos/400/150" alt="" />
+                <img src="https://picsum.photos/400" alt="" /> -->
             </div>
         </section>
+
+        <footer>
+            <h1 style="font-size: 32px; text-align: center">Get in Touch</h1>
+
+            <a class="about" href="mailto:munafhassan23@gmail.com"
+                >munafhassan23@gmail.com</a
+            >
+            <div class="socials"></div>
+            <p class="para">© 2022 Muhammad Munaf Photography</p>
+        </footer>
 
         <script>
             // Add active class to the current button (highlight it)
@@ -55,5 +102,7 @@
                 });
             }
         </script>
+
+        <script src="script.js"></script>
     </body>
 </html>
