--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -156,7 +156,10 @@
                     data-aos-duration="800"
                     style="margin-top: 40px"
                 >
-                    <a id="downloadProjectBtn" href="#contact">Get in Touch</a>
+                    <!-- <a id="downloadProjectBtn" href="#contact">Get in Touch</a> -->
+                    <a id="downloadProjectBtn" href="Resume.pdf" target="_blank"
+                        >Resume</a
+                    >
                     <a id="getInContactBtn" href="#myProjects"
                         >View Projects
                         <img
