--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -341,7 +341,7 @@
                 <div class="servicesB">
                     <h3 class="bodyText">Strategy</h3>
                     <p>
-                        In our strategy process, we analyze customer needs,
+                        In my strategy process, I analyze customer needs,
                         identify general product problems and advise on
                         important future decisions.
                     </p>
@@ -349,17 +349,17 @@
                 <div class="servicesB">
                     <h3 class="bodyText">Design</h3>
                     <p>
-                        In our strategy process, we analyze customer needs,
-                        identify general product problems and advise on
-                        important future decisions.
+                        My design process is about making complex solutions,
+                        simple. I combine thoughtful user experience with a
+                        clear visual identity.
                     </p>
                 </div>
                 <div class="servicesB">
                     <h3 class="bodyText">Development</h3>
                     <p>
-                        In our strategy process, we analyze customer needs,
-                        identify general product problems and advise on
-                        important future decisions.
+                        I bring products to life using latest technologies while
+                        focusing on a perfect visual output through clean and
+                        maintainable code.
                     </p>
                 </div>
             </div>
@@ -373,7 +373,9 @@
                 data-aos="fade-up"
                 data-aos-delay="200"
             >
-                <a id="exploreServicesBtn" href="">Explore Services</a>
+                <a id="exploreServicesBtn" href="services.html"
+                    >Explore Services</a
+                >
             </div>
         </section>
 
@@ -394,9 +396,10 @@
                     I'm a UI/UX Designer and Developer based in Islamabad,
                     Pakistan. I love solving problems by simplying complex
                     problems and combining insightful reserach with intutive
-                    design. I enjoy every stage of creating digital products
+                    design.
+                    <!-- I enjoy every stage of creating digital products
                     that are wanted by users, easy to use but also visually top
-                    notch.
+                    notch. -->
                 </p>
             </div>
         </section>
