--- a/mmunaf/services.html
+++ b/mmunaf/services.html
@@ -94,7 +94,8 @@
         <section id="servicesHeading" data-aos="fade-up">
             <p class="smallCaps" style="color: #ffffff">Services</p>
             <p class="mainHeadingText">
-                Aliquam sit amet augue vel neque tincidunt lobortis a id purus.
+                I create digital products & services that <br />
+                WoW, engage and delight.
             </p>
         </section>
 
@@ -109,13 +110,15 @@
                 <div class="container" data-aos="fade-up">
                     <p class="servicesHeadingText">Strategy</p>
                     <p class="serviceContentText">
-                        Morbi sed mi nec ipsum mollis tempus. Lorem ipsum dolor
-                        sit amet, consectetur adipiscing elit. In hac habitasse
-                        platea dictumst.
+                        In my strategy process, I analyze customer needs,
+                        identify general product problems and advise on
+                        important future decisions.
                     </p>
                     <p class="serviceDetailsList">
-                        - Research<br />- UI/UX Design<br />- Prototyping<br />-
-                        Information Architecture
+                        - Market Research <br />
+                        - Competitive Analysis <br />
+                        - Prototyping <br />
+                        - Information Architecture
                     </p>
                 </div>
             </div>
@@ -129,13 +132,16 @@
                 <div class="container" data-aos="fade-up">
                     <p class="servicesHeadingText">Design</p>
                     <p class="serviceContentText">
-                        Morbi sed mi nec ipsum mollis tempus. Lorem ipsum dolor
-                        sit amet, consectetur adipiscing elit. In hac habitasse
-                        platea dictumst.
+                        My design process is about making complex solutions,
+                        simple. I combine thoughtful user experience with a
+                        clear visual identity.
                     </p>
                     <p class="serviceDetailsList">
-                        - Research<br />- UI/UX Design<br />- Prototyping<br />-
-                        Information Architecture
+                        - User Interface Design <br />
+                        - User Experience Design <br />
+                        - Motion Design & Animations <br />
+                        - Branding<br />
+                        - Prototyping
                     </p>
                 </div>
             </div>
@@ -149,13 +155,15 @@
                 <div class="container" data-aos="fade-up">
                     <p class="servicesHeadingText">Development</p>
                     <p class="serviceContentText">
-                        Morbi sed mi nec ipsum mollis tempus. Lorem ipsum dolor
-                        sit amet, consectetur adipiscing elit. In hac habitasse
-                        platea dictumst.
+                        I bring products to life using latest technologies while
+                        focusing on a perfect visual output through clean and
+                        maintainable code.
                     </p>
                     <p class="serviceDetailsList">
-                        - Research<br />- UI/UX Design<br />- Prototyping<br />-
-                        Information Architecture
+                        - Landing Pages Development <br />
+                        - Front-end Development <br />
+                        - HTML, CSS, JS<br />
+                        - React JS
                     </p>
                 </div>
             </div>
